# SistemasOperativos2

FTP/: comandos.py  comandos_locales.py  comandos_remotos.py  comunicacion_async.py  lectura_comandos.py  main.py  tipos.py
FTPDistribuido/: .gitignore  LEEME.txt  Page.py  actor.py  arbiter.py  asyncClient.py  asyncServer.py  config.py  fixPaths.py  main.py  mainController.py  pyproject.toml  utils.py
FTPDistribuido/arbiter/: actions.py  health_check.py  requests.py  state.py
FTPDistribuido/controller/: actions.py  committer.py  file_system_update_watcher.py  file_watcher.py  pull.py  requests.py  state.py  updater.py
FTPDistribuido/interfaz/: .gitignore  package.json
FTPDistribuido/interfaz/src/: Types.ts  index.jsx
FTPDistribuido/interfaz/src/components/: Colors.js  ComputerCard.jsx  IconButton.jsx  IconShell.jsx  LoadingIndicator.jsx  utils.js
FTPDistribuido/interfaz/static/: Roboto.scss  Theme.scss  index.html  style.scss
FTPDistribuido/pruebas/: cliente.py  index.html  index.js  pruebaWeb.py  style.css
Practica1/: .gitignore  DescripciónProyecto.md  Documentacion.md  Investigación.md  Manual de usuario.md  TODO.md  compilarTodo  despachador-comun.h  despachador-main.c  despachador.c  despachador.h  ejecutor.c  fifo.c  generador.c  lectorProcesos.c  listas.c  listas.h  lpp.c  main.c  memoria-lru.py  memoria.c  memoria.h  ordenamiento.c  ordenamiento.h  pipes.c  pipes.h  planeador.h  planificador.h  productorConsumidor.c  productorConsumidor.h  receptor.c  rr.c  rre.c  semaforos.c  semaforos.h  sjf.c  sjfp.c  srtf.c  tipos.h  utilerias.c  (+3 more)
(+22 files in other folders)
