[tool.poetry]
name = "ftpdistribuido"
version = "0.1.0"
description = ""
authors = ["ggzor <30713864+ggzor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.15.0"
PyQtWebEngine = "^5.15.0"
asyncqt = "^0.8.0"
aiostream = "^0.4.1"
lenses = "^0.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
neovim = "^0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
